--- a/styles.css
+++ b/styles.css
@@ -8,18 +8,22 @@
 }
 
 button {
-    width: 140px;
-    height: 140px;
+    width: 210px;
+    height: 210px;
     text-align: center;
     margin-right: 8px;
     margin-bottom: 13px;
-    font-size: 60px;
-    font-weight: 500;
-    border-radius: 100px;
+    font-size: 90px;
+    font-weight: 400;
+    border-radius: 500px;
     border: none;
     color: #ffffff;
     background-color: #2a2a2c;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+}
+
+button:hover {
+    background-color: #444444;
 }
 
 button.op {
@@ -27,15 +31,23 @@ button.op {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 }
 
+button.op:hover {
+    background-color: #ffb340;
+}
+
 button.top {
     background-color: #5c5c5f;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 }
 
+button.top:hover {
+    background-color: #7d7d7f;
+}
+
 #inputField {
-    width: 560px;
-    height: 100px;
-    font-size: 80px;
+    width: 870px;
+    height: 150px;
+    font-size: 100px;
     text-align: right;
     background-color: #000000;
     border: none;
